<resources>
    <string name="app_name">YilaoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Personal_Information">我的信息</string>
    <string name="mytask">我的任务</string>
    <string name="Nick">nickName</string>
    <string name="MyMessage">我的消息</string>
    <string name="biaoti">标题</string>
    <string name="Errands">跑腿</string>
    <string name="Purchase">代购</string>
    <string name="Idle">闲置</string>
    <string name="Bulletin">公告</string>
    <string name="Personal">个人</string>
    <string name="setting">设置</string>
    <string name="name">nick</string>
    <string name="perosonbackground">bg</string>
    <string name="Avatar">avatar</string>
    <string name="wallet">我的钱包</string>
    <string name="Task">我的任务</string>
    <string name="Friend">我的好友</string>

    <string name="search">搜索</string>
    <string name="search_content">请输入你要搜索的内容</string>
    <string name="tab_text_1">Tab1</string>
    <string name="tab_text_2">Tab2</string>
    <string name="gettask">领取任务</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="Imagebg1">bg1</string>
    <string name="Imagebg2">bg2</string>
    <string name="Imagebg3">bg3</string>
    <string name="Imagebg4">bg4</string>
    <string name="Imagebg5">bg5</string>
    <string name="Imagebg6">bg6</string>
    <string name="Out">out</string>
    <string name="Star">评分体系</string>
    <string name="In">in</string>
    <string name="Quote">个性签名</string>
    <string name="quote">quote</string>
    <string name="Avat">头像</string>
    <string name="gender">性别</string>
    <string name="Gender" />
    <string name="sex">男</string>
    <string name="IDCard">实名认证</string>
    <string name="phonenum">手机号</string>
    <string name="Phone">phoneNumber</string>
    <string name="address">地址</string>
    <string name="choosebg">选择背景</string>
    <string name="Information">个人信息</string>
    <string name="Money">money</string>
    <string name="rmb">￥100</string>
    <string name="comein">充值</string>
    <string name="withdraw">提现</string>
    <string name="Myfriend">我的好友</string>
    <string name="chatRecord">聊天记录</string>
    <string name="friendlist">好友列表</string>
    <string name="Input">content</string>
    <string name="Voice">voice</string>
    <string name="Emotion">emotion</string>
    <string name="Add">add</string>
    <string name="myfriend">我的好友</string>
    <string name="Chat">chat</string>
    <string name="Content">content</string>
    <string name="Determine">确定</string>
    <string name="RealName">真实姓名</string>
    <string name="IDnumber">身份证号</string>
    <string name="inputname" />
    <string name="idnum" />
    <string name="Camera">camera</string>
    <string name="IDz">点击上传身份证正面</string>
    <string name="IDf">点击上传身份证反面</string>
    <string name="Top_up">充值金额</string>
    <string name="wechatpay">pay1</string>
    <string name="check">确定</string>
    <string name="Alipay">pay2</string>
    <string name="withdrawmon">提现金额</string>
    <string name="Balance">余额：</string>
    <string name="Chage_psd">修改密码</string>
    <string name="about">关于</string>
    <string name="sign_out">退出登录</string>
    <string name="oldPsd">原密码</string>
    <string name="NewPsd">新密码</string>
    <string name="checkPsd">确认密码</string>
    <string name="Findingthings">寻物启事</string>
    <string name="Team_learning">组队学习</string>
    <string name="Lost_and_found">失物招领</string>
    <string name="Others">其他</string>
    <string name="xiao">校聚</string>
    <string name="id_">账号</string>
    <string name="sign">注册</string>
    <string name="tips">本信息仅用于校园身份验证，请放心填写</string>
    <string name="MyTask">我的任务</string>
    <string name="MyScore">我的评分</string>
    <string name="tz">通知</string>
    <string name="pen">笔</string>
    <string name="find">寻物启事</string>
    <string name="lost">失物招领</string>
    <string name="shareTools">共享工具</string>
    <string name="study">组队学习</string>
    <string name="east">其他</string>
    <string name="TopUpSuccess">充值成功</string>
    <string name="fanhui">返回</string>
    <string name="tixianSuccess">提现成功</string>
    <string name="time">发布时间</string>
    <string name="find_photo">fp</string>
    <string name="lost_photo">lp</string>
    <string name="yuanmima">原密码</string>
    <string name="new_psd">新密码</string>
    <string name="check_psd">确认密码</string>
    <string name="hint_psd">密码至少要8位</string>

    <string name="searchcontent">三只松鼠</string>
    <string name="back">返回</string>
    <string name="head">头像</string>
    <string name="go_ahead">前进</string>
    <string name="personName">昵称</string>
    <string name="joinTime">" 加入时间"</string>
    <string name="eyeshadow">眼影</string>
    <string name="textContent">" 我是item的布局"</string>
    <string name="finish">任务领取成功</string>
    <string name="Concrete_reason">请输入具体原因</string>
    <string name="Divulge_privacy">" 泄露隐私"</string>
    <string name="Ilegal">违法信息</string>
    <string name="Yellow_related">涉黄信息</string>
    <string name="Harmful">有害信息</string>
    <string name="Report">举报</string>
    <string name="concrete_content">具体内容</string>
    <string name="share">分享</string>
    <string name="lxmj">" 联系卖家"</string>
    <string name="buy_right_now">立即购买</string>
    <string name="blank">空白</string>
    <string name="queren">确认</string>

    <string name="wjmm">忘记密码</string>
    <string name="yhzc">用户注册</string>
    <string name="qsrmm">请输入密码</string>
    <string name="qslzh">请输入账号</string>
    <string name="todo">TODO</string>
    <string name="item">1</string>
    <string name="item2">2</string>
    <string name="phone">请输入手机号码</string>
    <string name="yzm">获取验证码</string>
    <string name="qsryzm">请输入验证码</string>
    <string name="qzcsrmm">请再次输入密码</string>
    <string name="xyb">下一步</string>
    <string name="smrz">实名认证</string>
    <string name="wc">完成</string>
    <string name="errands">跑腿</string>
    <string name="buy">代购</string>
    <string name="empty">闲置</string>
    <string name="announce">公告</string>
    <string name="personal">个人</string>
    <string name="sy">首页</string>
    <string name="zc">注册</string>
    <string name="zj">点击上传自己的照片，让更多的朋友认识你</string>
    <string name="nickname">请输入昵称</string>
    <string name="boy">男</string>
    <string name="gir">女</string>
    <string name="sc">请输入所在学校</string>
    <string name="tip_npassword">请输入新密码</string>
    <string name="qr">确认修改</string>
    <string name="tip_znpassword">再次输入新密码</string>
    <string name="xgmm">修改密码</string>a
    <string name="message">任务详情</string>
    <string name="need">请您描述一下您的需求</string>
    <string name="saddress">请填写送达地址</string>
    <string name="bx">不限</string>
    <string name="oaddress">常用地址</string>
    <string name="bcoaddress">保存为常用地址</string>
    <string name="xboy">限男生</string>
    <string name="xgirl">限女生</string>
    <string name="money">薪酬</string>
    <string name="lrmb">最低0.1元（仅为劳务费，不包括物品本金）</string>
    <string name="ltime">时间限制</string>
    <string name="ntime">从任务被领取后开始计算</string>
    <string name="phonenumber">联系电话</string>
    <string name="ok">确认</string>
    <string name="delete">取消</string>
    <string name="xq">详情</string>
    <string name="address1">送达地址</string>
    <string name="myaddress">我的地址</string>
    <string name="mynick">我的昵称</string>
    <string name="acess">领取</string>
    <string name="quxiao">取消</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="release_errands">发布跑腿</string>
    <string name="release_bullentin">发布公告</string>
    <string name="release_purchase">发布代购</string>
    <string name="release_idle">发布闲置</string>
    <string name="basic">Basic</string>
    <string name="chattime">上午 10:00</string>
    <string name="object">物品</string>
    <string name="detail">详情</string>
    <string name="save_picture">保存图片</string>
    <string name="teamStudy">组队学习</string>
    <string name="activityname">活动名称</string>
    <string name="hello">你好</string>
    <string name="Tip">提示</string>
    <string name="applypermission">请申请权限</string>
    <string name="cancel">取消</string>
    <string name="cancelTask">取消订单</string>


    <string name="makeup">化妆品</string>
    <string name="bag">包包</string>
    <string name="shoes">鞋子</string>
    <string name="special_edition">专辑</string>
    <string name="book">书籍</string>
    <string name="other">其他</string>

    <string name="purchase">代购</string>
    <string name="find_purchase">找代购</string>
    <string name="contact">联系对方</string>
    <string name="addtask">加入任务</string>
    <string name="myPublishTask">发布的任务</string>
    <string name="myAcceptTask">接受的任务</string>
    <string name="bulletinContent">请您填写您的公告详细信息内容,包括商议地点、时间或方式</string>
    <string name="bulletinType">公告类型</string>
    <string name="bulletinTime">丢失时间</string>
    <string name="bulletinTimeHint">如果不是失物招领则不用填</string>
    <string name="lostAddress">丢失地点</string>
    <string name="lostAddressHint">请填写丢失地点</string>
    <string name="getcode">获取验证码</string>
    <string name="state">任务状态：</string>
    <string name="compeleteTask">完成任务</string>
    <string name="ErrandRemainTime">剩余时间：</string>
    <string name="ErrandRtime">30min</string>
    <string name="myphone">我的手机</string>
    <string name="Finish">完成</string>
    <string name="school">学校</string>
    <string name="nick">昵称</string>
    <string name="arriveAddress">送至</string>
    <string name="purchase_type">代购类型</string>
    <string name="can_purchase">能够代购</string>
    <string name="ObjectName">物品名称</string>
    <string name="inputObjectName">请输入物品名称</string>
    <string name="relativeAddress">请填写联系地点</string>
    <string name="accept_cancel_task">同意取消订单</string>
    <string name="refuse_accept_task">拒绝取消订单</string>
    <string name="StringLimit">40/40</string>
    <string name="id_school">如:某某大学某某校区</string>
    <string name="cancel_bulletin">取消公告</string>
</resources>