<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_permission"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:paddingLeft="28dp"
    android:paddingRight="28dp">


    <TextView
        android:id="@+id/tv_title"
        android:textSize="15sp"
        android:textColor="#333"
        android:layout_width="wrap_content"
        android:text="@string/Tip"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp" />


    <TextView
        android:id="@+id/tv_content"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/applypermission"
        android:lineSpacingExtra="5dp"
        android:textColor="#333"
        android:layout_marginTop="13dp" />



    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_left"
            android:textSize="@dimen/tip"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="30dp"
            android:text="@string/cancel"
            android:background="@drawable/shape_btn_bg" />
        <Button
            android:id="@+id/btn_right"
            android:textSize="@dimen/tip"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="30dp"
            android:layout_height="30dp"
            android:text="@string/check"
            android:background="@drawable/shape_btn_bg" />
    </LinearLayout>

</LinearLayout>
