<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.example.yilaoapp.ui.purchase.PurchaseViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.purchase.PurchaseMessageFragment">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/release_purchase"
                app:titleTextAppearance="@style/toolbarTitle" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/editTextTextMultiLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="0.8"
                        android:ems="10"
                        android:gravity="start|top"
                        android:hint="@string/need"
                        android:inputType="textMultiLine"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/numView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:gravity="right"
                        android:text="@string/StringLimit" />

                    <View
                        android:id="@+id/view6"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/div_white" />

                    <cn.bingoogolapple.photopicker.widget.BGASortableNinePhotoLayout
                        android:id="@+id/mPurchasePhotosSnpl"
                        style="@style/WrapWrap"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:bga_snpl_deleteDrawable="@mipmap/bga_pp_ic_delete"
                        app:bga_snpl_deleteDrawableOverlapQuarter="false"
                        app:bga_snpl_editable="true"
                        app:bga_snpl_itemCornerRadius="0dp"
                        app:bga_snpl_itemSpanCount="3"
                        app:bga_snpl_itemWhiteSpacing="4dp"
                        app:bga_snpl_itemWidth="0dp"
                        app:bga_snpl_maxItemCount="9"
                        app:bga_snpl_otherWhiteSpacing="100dp"
                        app:bga_snpl_placeholderDrawable="@mipmap/bga_pp_ic_holder_light"
                        app:bga_snpl_plusDrawable="@mipmap/bga_pp_ic_plus"
                        app:bga_snpl_plusEnable="true"
                        app:bga_snpl_sortable="true" />

                    <View
                        android:id="@+id/view7"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/div_white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/ObjectName"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:layout_marginBottom="30dp"
                                android:text="@string/purchase_type"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/address"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="10dp"
                                android:text="@string/address1"
                                android:textAlignment="viewStart"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/money"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="10dp"
                                android:text="@string/money"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/telephone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="10dp"
                                android:text="@string/phonenumber"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="3"
                            android:orientation="vertical">

                            <com.rengwuxian.materialedittext.MaterialEditText
                                android:id="@+id/purchase_objectName"
                                android:layout_width="match_parent"
                                android:layout_height="45dp"
                                android:layout_weight="1"
                                android:autofillHints=""
                                android:ems="10"
                                android:hint="@string/inputObjectName"
                                android:inputType="textMultiLine"
                                android:textColor="@color/text_color"
                                android:textSize="16sp"
                                tools:targetApi="o" />

                            <RadioGroup
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1">

                                <RadioButton
                                    android:id="@+id/radioButton4"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/can_purchase"
                                    android:textSize="16sp" />

                                <RadioButton
                                    android:id="@+id/radioButton5"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/find_purchase"
                                    android:textSize="16sp" />
                            </RadioGroup>

                            <com.rengwuxian.materialedittext.MaterialEditText
                                android:id="@+id/address_text"
                                android:layout_width="match_parent"
                                android:layout_height="45dp"
                                android:layout_weight="1"
                                android:autofillHints=""
                                android:ems="10"
                                android:hint="@string/saddress"
                                android:inputType="textMultiLine"
                                android:textColor="@color/text_color"
                                android:textSize="16sp"
                                tools:targetApi="o" />

                            <com.rengwuxian.materialedittext.MaterialEditText
                                android:id="@+id/money_text"
                                android:layout_width="match_parent"
                                android:layout_height="45dp"
                                android:layout_weight="1"
                                android:autofillHints=""
                                android:ems="10"
                                android:hint="@string/lrmb"
                                android:inputType="number|numberDecimal"
                                android:textColor="@color/text_color"
                                android:textSize="16sp"
                                tools:targetApi="o" />

                            <com.rengwuxian.materialedittext.MaterialEditText
                                android:id="@+id/telephone_text"
                                android:layout_width="match_parent"
                                android:layout_height="45dp"
                                android:layout_weight="1"
                                android:autofillHints=""
                                android:ems="10"
                                android:hint="@string/phone"
                                android:inputType="number|phone"
                                android:textColor="@color/text_color"
                                android:textSize="16sp"
                                tools:targetApi="o" />
                        </LinearLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/Purchasefinish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="50dp"
                        android:background="@drawable/button_deepen"
                        android:text="@string/Determine"
                        android:textColor="@color/colorTitle"
                        android:textSize="16sp" />

                </LinearLayout>
            </ScrollView>


        </LinearLayout>
    </FrameLayout>
</layout>