<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="data"
            type="com.example.yilaoapp.ui.errands.ErrandsViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.errands.ErrandsMessageFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/release_errands"
                app:titleTextAppearance="@style/toolbarTitle" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editTextTextMultiLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="0.8"
                        android:ems="10"
                        android:gravity="start|top"
                        android:hint="@string/need"
                        android:inputType="textMultiLine" />

                    <View
                        android:id="@+id/view6"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/div_white" />

                    <View
                        android:id="@+id/view7"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/div_white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/address"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="15dp"
                                android:text="@string/address1"
                                android:textAlignment="viewStart"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/money"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="15dp"
                                android:text="@string/money"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/limit_time"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="15dp"
                                android:text="@string/ltime"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/telephone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="15dp"
                                android:text="@string/phonenumber"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="3"
                            android:orientation="vertical">

                            <com.rengwuxian.materialedittext.MaterialEditText
                                android:id="@+id/address_text"
                                android:layout_width="match_parent"
                                android:layout_height="45dp"
                                android:layout_marginBottom="5dp"
                                android:layout_weight="1"
                                android:autofillHints=""
                                android:ems="10"
                                android:hint="@string/saddress"
                                android:inputType="textMultiLine"
                                android:textColor="@color/text_color"
                                tools:targetApi="o" />

                            <com.rengwuxian.materialedittext.MaterialEditText
                                android:id="@+id/money_text"
                                android:layout_width="match_parent"
                                android:layout_height="45dp"
                                android:layout_marginBottom="5dp"
                                android:layout_weight="1"
                                android:autofillHints=""
                                android:ems="10"
                                android:hint="@string/lrmb"
                                android:inputType="textMultiLine"
                                android:textColor="@color/text_color"
                                tools:targetApi="o" />

                            <com.rengwuxian.materialedittext.MaterialEditText
                                android:id="@+id/limit_time_text"
                                android:layout_width="match_parent"
                                android:layout_height="45dp"
                                android:layout_marginBottom="5dp"
                                android:layout_weight="1"
                                android:autofillHints=""
                                android:ems="10"
                                android:hint="@string/ntime"
                                android:inputType="textMultiLine"
                                android:textColor="@color/text_color"
                                tools:targetApi="o" />

                            <com.rengwuxian.materialedittext.MaterialEditText
                                android:id="@+id/telephone_text"
                                android:layout_width="match_parent"
                                android:layout_height="45dp"
                                android:layout_marginBottom="5dp"
                                android:layout_weight="1"
                                android:autofillHints=""
                                android:ems="10"
                                android:hint="@string/phone"
                                android:inputType="textMultiLine"
                                android:textColor="@color/text_color"
                                tools:targetApi="o" />
                        </LinearLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="80dp"
                        android:background="@drawable/button_deepen"
                        android:text="@string/Determine"
                        android:textColor="@color/colorTitle"
                        android:textSize="16sp" />
                </LinearLayout>
            </ScrollView>


        </LinearLayout>
    </FrameLayout>
</layout>